[tool.poetry]
name = "Transfer_entropy"
version = "1.0.0"
description = "Analyzer of nonlinear data"
authors = ["Hynek Lavicka"]

[tool.poetry.dependencies]
python = ">= 3.11, < 4.0"
scipy = ">=1.3"
numpy = ">=1.13.3"
mpmath = ">=1.2.1"
pandas = {extras = ["aws", "computation", "excel", "feather", "mysql", "parquet", "postgresql"], version = "^2.0.0"}
matplotlib = ">=3.5.1"
pip = ">=22.3.1"
pydevd = ">=1.9.0"
pydevd-pycharm = ">=201.3803.74"
pytest-pycharm = ">=0.6.0"
sphinx = ">=2.4.0"
sphinx-rtd_theme = ">=0.4.3"
scikit-learn = ">=0.24.1"
netCDF4 = ">=1.6.1"
pathos = ">=0.2.7"
geos = ">=0.2.3"
#cryptoxlib-aio = ">=5.0.0"
requests = ">=2.26.0"
mysql-connector-python = ">=8.0.26"
SQLAlchemy = ">=1.4.25"
PyMySQL = ">=1.0.2"
ccxt = ">=1.58.55"
psycopg2 = ">=2.9.1"
yarl = ">=1.8.0"
black = "^22.10.0"
wrapt = "^1.14.1"
sqlalchemy-utils = "^0.38.3"
mongo = "^0.2.0"
python-dotenv = "^1.0.0"
python-forex-quotes = "^2.0.3"
ipython = "^9.4.0"
cython = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=3.4"

[tool.black]
line-length = 120
target-version = ['py310', 'py311']
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
